# Code-Watch

./: .editorconfig  .env.example  .gitignore  .pre-commit-hooks.yaml  AUDIT.md  CLAUDE.md  Dockerfile  LICENSE  README.md  action.yml  codewatch-prompt.md  config.example.yaml  docker-compose.yml  install.bat  install.sh  pyproject.toml  requirements-dev.txt  requirements.txt  start.bat  start.sh
.claude/: settings.local.json
.claude/commands/: add-router.md  dev.md  lint.md  test.md  watcher-context.md  ws-event.md
.github/workflows/: ci.yml
backend/: main.py
backend/cli/: main.py
backend/core/: auth.py  config.py  database.py  logging.py  ws_manager.py
backend/models/: events.py  project.py  review.py
backend/routers/: config.py  health.py  projects.py  reviews.py  status.py  ws.py
backend/services/: diff.py  notifier.py  ollama_client.py  prompt_builder.py  queue.py  review_parser.py  reviewer.py  watcher.py
backend/utils/: gitignore.py  language.py
docs/: architecture.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts  types.ts
frontend/src/components/: FileTree.tsx  ReviewCard.tsx  ReviewDetail.tsx  ReviewFeed.tsx  ReviewMarkdown.tsx  Settings.tsx  Sidebar.tsx  StatusBar.tsx  Toast.tsx
scripts/: verify_demo_review.py
tests/: conftest.py  test_auth.py  test_cli.py  test_config.py  test_gitignore.py  test_health.py  test_queue.py  test_reviewer_prompt.py  test_watcher_debounce.py
tests/eval/: _fixtures.py  test_eval.py
(+66 files in other folders)
